fixed spacing issue with site-wide woocommerce alert

--- a/src/sass/woocommerce/components/_alerts.scss
+++ b/src/sass/woocommerce/components/_alerts.scss
@@ -83,6 +83,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
+  margin-bottom: 0;
   padding: $spacer $spacer-lg $spacer $spacer-xl;
   background-color: $primary;
   color: color-yiq( $primary );
